--- a/src/templates/client/en/index.html
+++ b/src/templates/client/en/index.html
@@ -24,7 +24,7 @@
                                     </div>
                                     <div class="news-content">
                                         <h2 class="news-title">
-                                            <a href="{{ url_for('client.news_detail', news_slug=main_featured.slug) }}">{{ main_featured.title }}</a>
+                                            <a href="{{ url_for('client.en_news_detail', news_slug=main_featured.slug) }}">{{ main_featured.title }}</a>
                                         </h2>
                                         <p class="news-description">
                                             {{ main_featured.summary or main_featured.content[:200] + '...' }}
@@ -87,7 +87,7 @@
                                         <div class="col-md-8">
                                             <div class="news-content">
                                                 <h3 class="news-title">
-                                                    <a href="{{ url_for('client.news_detail', news_slug=news.slug) }}">{{ news.title }}</a>
+                                                    <a href="{{ url_for('client.en_news_detail', news_slug=news.slug) }}">{{ news.title }}</a>
                                                 </h3>
                                                 <p class="news-description">
                                                     {{ news.summary or news.content[:200] + '...' }}
@@ -107,7 +107,7 @@
                         </div>
 
                         <div class="text-center mt-4">
-                            <button class="btn-load-more">
+                            <button class="btn-load-more-en">
                                 <i class="fas fa-sync-alt"></i> View more
                             </button>
                         </div>
