--- a/src/templates/client/en/search.html
+++ b/src/templates/client/en/search.html
@@ -13,7 +13,7 @@
                     <!-- Breadcrumb -->
                     <nav aria-label="breadcrumb" class="mb-4">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="{{ url_for('client.index') }}">Home</a></li>
+                            <li class="breadcrumb-item"><a href="{{ url_for('client.en_index') }}">Home</a></li>
                             <li class="breadcrumb-item active" aria-current="page">Search</li>
                         </ol>
                     </nav>
