--- a/src/templates/client/en/news_detail.html
+++ b/src/templates/client/en/news_detail.html
@@ -1,5 +1,5 @@
-{% extends '/client/vn/base.html' %}
-{% block title %}{{ category.name }} - VnNews{% endblock %}
+{% extends '/client/en/base.html' %}
+{% block title %}{{ category.name }} - VnNews International{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_client.css') }}">
 {% endblock %}
