--- a/src/templates/client/en/news_detail.html
+++ b/src/templates/client/en/news_detail.html
@@ -132,7 +132,7 @@
                     {% if related_news %}
                     <section class="related-news mt-5">
                         <h2 class="section-title">
-                            <span>Tin liên quan</span>
+                            <span>Related News</span>
                         </h2>
                         <div class="row">
                             {% for related in related_news %}
