--- a/src/templates/client/vn/search.html
+++ b/src/templates/client/vn/search.html
@@ -129,12 +129,9 @@
                             <i class="fas fa-tags"></i> Từ khóa phổ biến
                         </h3>
                         <div class="popular-searches">
-                            <a href="{{ url_for('client.search', q='thời sự') }}" class="badge bg-secondary me-2 mb-2">Thời sự</a>
-                            <a href="{{ url_for('client.search', q='kinh doanh') }}" class="badge bg-secondary me-2 mb-2">Kinh doanh</a>
-                            <a href="{{ url_for('client.search', q='thể thao') }}" class="badge bg-secondary me-2 mb-2">Thể thao</a>
-                            <a href="{{ url_for('client.search', q='giải trí') }}" class="badge bg-secondary me-2 mb-2">Giải trí</a>
-                            <a href="{{ url_for('client.search', q='công nghệ') }}" class="badge bg-secondary me-2 mb-2">Công nghệ</a>
-                            <a href="{{ url_for('client.search', q='sức khỏe') }}" class="badge bg-secondary me-2 mb-2">Sức khỏe</a>
+                            {% for category in categories %}
+                                <a href="{{ url_for('client.search', q=category.name) }}" class="badge bg-secondary me-2 mb-2">{{ category.name }}</a>
+                            {% endfor %}
                         </div>
                     </aside>
                 </div>
