Update international news

--- a/src/templates/admin/admin.html
+++ b/src/templates/admin/admin.html
@@ -94,6 +94,11 @@
                 </a>
             </li>
             <li>
+                <a href="#" data-section="international-drafts">
+                    <i class="fas fa-save"></i> Quốc tế nháp
+                </a>
+            </li>
+            <li>
                 <a href="#" data-section="en-menu-manager">
                     <i class="fas fa-bars"></i> Quản lý Menu Quốc tế
                 </a>
@@ -174,6 +179,8 @@
         {% include 'admin/international-section.html' %}
 
         {% include 'admin/int-pending-section.html' %}
+
+        {% include 'admin/int-drafts-section.html' %}
 
         {% include 'admin/int-menu-manager.html' %}
 
