--- a/src/templates/editor/editor.html
+++ b/src/templates/editor/editor.html
@@ -56,7 +56,7 @@
                     <i class="fas fa-check-circle"></i> Đã xuất bản
                 </a>
             </li>
-            <li class="nav-divider">
+            <!-- <li class="nav-divider">
                 <span>QUỐC TẾ</span>
             </li>
             <li>
@@ -83,7 +83,7 @@
                 <a href="#" data-section="int-published">
                     <i class="fas fa-check-circle"></i> Quốc tế đã xuất bản
                 </a>
-            </li>
+            </li> -->
             <li class="nav-divider">
                 <span>KHÁC</span>
             </li>
